--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 About
             </h2>
             <p>
-                If you'd like to learn more about me then go to the about page
+                If you'd like to learn more about me then go to the about page.
             </p>
             <p>
                 <a href="./about.html">learn more</a>
