added link to my resume and built resume page

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
         </section>
         <section>
             <h2>
+                Resume
+            </h2>
+            <a href="./resume.html">link to my resume</a>
+        </section>
+        <section>
+            <h2>
                 What I've done
             </h2>
         </section>
